@@ -7,10 +7,9 @@ import io.netty.util.internal.logging.JdkLoggerFactory;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 /**
  * Instantiates a {@link LunaServer} that will start Luna.
@@ -33,6 +32,11 @@ public final class Luna {
      * The log4j2 settings.
      */
     private static final LoggingSettings loggingSettings;
+
+    /**
+     * The mechanism used to read {@code .toml} files.
+     */
+    private static final Toml TOML = new Toml();
 
     /**
      * A private constructor.
@@ -78,9 +82,8 @@ public final class Luna {
      * @return The settings object.
      */
     private static LunaSettings loadSettings() throws IOException {
-        var fileReader = new FileReader(Paths.get("data", "luna.toml").toFile());
-        try (var bufferedReader = new BufferedReader(fileReader)) {
-            return new Toml().read(bufferedReader).to(LunaSettings.class);
+        try (var bufferedReader = Files.newBufferedReader(Path.of("data", "luna.toml"))) {
+            return TOML.read(bufferedReader).to(LunaSettings.class);
         }
     }
 
@@ -90,9 +93,8 @@ public final class Luna {
      * @return The logging settings object.
      */
     private static LoggingSettings loadLoggingSettings() throws IOException {
-        var fileReader = new FileReader(Paths.get("data", "logging.toml").toFile());
-        try (var bufferedReader = new BufferedReader(fileReader)) {
-           return new Toml().read(bufferedReader).to(LoggingSettings.class);
+        try (var bufferedReader = Files.newBufferedReader(Path.of("data", "logging.toml"))) {
+            return TOML.read(bufferedReader).to(LoggingSettings.class);
         }
     }
 
